--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "value-accessor",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "author": {
         "name": "Pavel Dymkov",
@@ -31,6 +31,7 @@
     "devDependencies": {
         "@types/jest": "^28.1.6",
         "jest": "^28.1.3",
+        "markdown-toc": "^1.2.0",
         "npm-packagr": "^1.0.51",
         "prettier": "^2.7.1",
         "typescript": "^4.7.4"
